1999-01-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefObject.m ([Object_s -lispOut:deep:], [Object_s
	-hdf5Out:deep:]): Use getTypeName instead of name.

	* DefObject.[hm], defobj.h ([Object_s -getTypeName]): New method.

	* HDF5Object.[hm], defobj.h ([HDF5_c -iterateAttributes:]): New method.

	* HDF5Object.m (string_ref): New function.

	* HDF5Object.m ([HDF5_c -createEnd]): Register string_ref.
	([HDF5_c -drop]): Unregister string_ref.
	
1999-01-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Archiver.m ([Archiver_c -createEnd]): Check for readability
	of swarmArchiver.hdf before attempting load.

	* HDF5Object.m ([HDF5_c +createBegin:]): Only init loc_id if HAVE_HDF5 
	is defined.

	* HDF5Object.[hm]: Only define setId: if HAVE_HDF5 is defined.

	* Archiver.m ([Archiver_c -save]): Set createFlag to YES.
	([Archiver_c -createEnd]): Add applicationMap processing support
	for HDF5.
	(hdf5_output_objects): setCreateGroupFlag -> setDatasetFlag.  Set
	createFlag to NO.

	* DefObject.m ([Object_s -hdf5Out:deep:]): Set createFlag to YES.
	
	* HDF5Object.m ([HDF5_c +createBegin:]): Initialize datasetFlag and
	new variable createFlag to NO.

	* HDF5Object.[hm], defobj.h ([HDF5_C -setCreateFlag:], [HDF
	-setId:], [HDF5_c iterate:], [HDF5_c getDatasetFlag]): New methods.
	([HDF5_C -setDatasetFlag:]): Was setCreateGroupFlag:.

	* HDF5Object.h (HDF5_c): Add createFlag.  Rename createGroupFlag to
	datasetFlag.

1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* HDF5Object.m (hdf5_store_attribute): New internal function.
	([HDF -storeAttribute:value:]): Use it.
	([HDF -storeAsDataset:typeName:type:ptr:]): Use it if typeName
	non-NULL.

	* HDF5Object.[hm], defobj.h: Add typeName: to
	storeAsDataset:typeName:type:ptr.

	* DefObject.m ([Object_s -hdf5Out:deep:]): Use it.

	* Archiver.m ([Archiver_c -lispOut:]): Put cons
	(cons appKey objects) within loop over applications.
	(lispProcessMakeObjcPairs): Pass app instead of deepMap.